--- a/index.html
+++ b/index.html
@@ -3,18 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PigeonHole - Pokémon Card Mystery Boxes on TON</title>
-    <meta name="description" content="Open mystery boxes and collect rare Pokémon cards using TON tokens. Trade, collect, and redeem physical cards from your digital collection." />
-    <meta name="author" content="PigeonHole" />
+    <title>Pullemon - Pokémon Card Mystery Boxes with Telegram Stars</title>
+    <meta name="description" content="Open mystery boxes and collect rare Pokémon cards using Telegram Stars. Trade, collect, and redeem physical cards from your digital collection." />
+    <meta name="author" content="Pullemon" />
 
-    <meta property="og:title" content="PigeonHole - Pokémon Card Mystery Boxes" />
-    <meta property="og:description" content="Collect rare Pokémon cards with TON. Each mystery box contains cards with different rarities!" />
+    <meta property="og:title" content="Pullemon - Pokémon Card Mystery Boxes" />
+    <meta property="og:description" content="Collect rare Pokémon cards with Telegram Stars. Each mystery box contains cards with different rarities!" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    
+    <!-- Telegram WebApp Script -->
+    <script src="https://telegram.org/js/telegram-web-app.js?59"></script>
   </head>
 
   <body>
